crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__help__help_harvest.snap
---
source: crates/engram-cli/tests/cli/snapshot/help.rs
expression: "f.run_bare(& [\"harvest\", \"--help\"])"
---
$ engramdb harvest --help
exit: 0
--- stdout ---
Inspect past Claude Code sessions for knowledge worth remembering

Provides the raw material for the `/engram:harvest` slash command: `list` shows which sessions are in scope, `show` prints a budgeted digest of one, `mark` records that a session has been reviewed so it is not offered again, and `reset` undoes that record.

`search` answers "did we ever discuss X" over past conversations, `index` builds the rows it reads (otherwise built by the maintenance pass), and `summary` attaches a curated description of a session to its row. `ledger` inspects and manages what has accumulated — the review decisions and the compressed transcript copies the SessionEnd hook keeps (`list`, `show`, `export`, `rm`, `prune`).

Scope defaults to the root of this project's hierarchy plus every project registered under it — so from a git worktree that is the main checkout and its sibling worktrees too, since they share one memory store while filing transcripts under their own paths.

Usage: engramdb harvest [OPTIONS] <COMMAND>

Commands:
  list     List past sessions in scope, newest activity first
  show     Print a budgeted digest of one session
  mark     Record that a session has been reviewed, so it is not offered again
  index    Index one or more sessions for `harvest search`
  search   Search indexed past conversations
  summary  Set or replace a session's curated summary, re-embedding only it
  reset    Forget a session's harvest record so it is offered again
  ledger   Inspect and manage the harvest ledger and its transcript archives
  help     Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>
          Output format

          Possible values:
          - pretty: Human-friendly colored output with formatting
          - json:   JSON output for programmatic parsing
          - plain:  Plain text output without colors

      --json
          Output as JSON

  -q, --quiet
          Suppress non-essential output

  -v, --verbose
          Verbose output

      --no-color
          No colored output

      --dir <DIR>
          Working directory (default: current directory)

      --embedding-backend <EMBEDDING_BACKEND>
          Embedding backend: auto, onnx, or ollama

      --in-process
          Force in-process model loading — never contact the shared embedding daemon. Equivalent to setting ENGRAMDB_IN_PROCESS=1

      --spawn-daemon
          Spawn the shared embedding daemon if it is not already running, then route through it. By default the CLI only uses a daemon that is already running (connect-only)

      --no-maintenance
          Skip the automatic main-worktree maintenance pass (orphan-project cleanup + a quick store health check) for this invocation. Equivalent to setting ENGRAMDB_DISABLE_AUTO_MAINTENANCE=1

  -h, --help
          Print help (see a summary with '-h')
--- stderr ---
